@@ -32,3 +32,46 @@ Runnable examples:
 - Example1_9Main
 
 ## Chapter 2 - examples
+
+## Chapter 3 - examples 
+```bash
+# Factory Method: creating instances 
+$ javac --release 17 --enable-preview -g -cp out/Chapter03/fm -sourcepath java -d out/Chapter03/fm ./Chapter03/factory_method/*.java
+$ java --enable-preview -cp out/Chapter03/fm FactoryMethodMain
+$ java --enable-preview -cp out/Chapter03/fm -XX:StartFlightRecording=filename=FactoryMethod.jfr,dumponexit-true,settings=profile FactoryMethodMain
+
+# Abstract Factory: instancise proper factory to create desired instances
+$ javac --release 17 --enable-preview -g -cp out/Chapter03/af -sourcepath java -d out/Chapter03/af ./Chapter03/abstract_factory/*.java
+$ java --enable-preview -cp out/Chapter03/af AbstractFactoryMain
+
+# Builder
+$ javac --release 17 --enable-preview -g -cp out/Chapter03/builder -sourcepath java -d out/Chapter03/builder ./Chapter03/builder/*.java
+$ java --enable-preview -cp out/Chapter03/builder BuilderMain
+
+# Prototype
+$ javac --release 17 --enable-preview -g -cp out/Chapter03/prototype -sourcepath java -d out/Chapter03/prototype ./Chapter03/prototype/*.java
+$ java --enable-preview -cp out/Chapter03/prototype PrototypeMain
+
+# Singleton 
+$ javac --release 17 --enable-preview -g -cp out/Chapter03/singleton -sourcepath java -d out/Chapter03/singleton ./Chapter03/singleton/*.java
+$ java --enable-preview -cp out/Chapter03/singleton SingletonMain
+
+
+# Object Pool
+$ javac --release 17 --enable-preview -g -cp out/Chapter03/object_pool -sourcepath java -d out/Chapter03/object_pool ./Chapter03/object_pool/*.java
+$ java --enable-preview -cp out/Chapter03/object_pool ObjectPoolMain
+
+# Lazy Initialization
+$ javac --release 17 --enable-preview -g -cp out/Chapter03/lazy_initialization -sourcepath java -d out/Chapter03/lazy_initialization ./Chapter03/lazy_initialization/*.java
+$ java --enable-preview -cp out/Chapter03/lazy_initialization LazyInitializationMain
+
+# Dependency Injection
+$ javac --release 17 --enable-preview -g -cp out/Chapter03/dependency_injection -sourcepath java -d out/Chapter03/dependency_injection ./Chapter03/dependency_injection/*.java
+$ java --enable-preview -cp out/Chapter03/dependency_injection DependencyInjectionMain
+```
+
+```bash 
+# Starting the JavaFlightRecorder for the patterns
+# Recordings are done on Java 17
+$ java -XX:StartFlightRecording=filename=<PATTERN_NAME_MAIN>.jfr,dumponexit-true,settings=profile <MAIN_CLASS>
+```
